--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "com.unity.cinemachine": "3.1.3",
+    "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.visualeffectgraph": "17.0.4",
     "jp.keijiro.klutter-tools": "2.1.0",
     "com.unity.modules.particlesystem": "1.0.0"
   },
